--- a/Web.config
+++ b/Web.config
@@ -19,7 +19,7 @@
   </appSettings>
   <connectionStrings>
     <!--<add name="ConnectionString" connectionString="Data Source=DESKTOP-SLC4F5P;Initial Catalog=HaiDen;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-   <add name="ConnectionString" connectionString="Data Source=tcp:haiden.database.windows.net,1433;Initial Catalog=HaiDen;User Id=haiden@haiden;Password=12345678@Xx" providerName="System.Data.SqlClient" />
+    <add name="ConnectionString" connectionString="Data Source=tcp:haidendbserver.database.windows.net,1433;Initial Catalog=HaiDenDB;User Id=haiden@haidendbserver;Password=12345678@Xx" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <urlrewritingnet rewriteOnlyVirtualUrls="true" contextItemsPrefix="QueryString" defaultPage="" defaultProvider="RegEx" xmlns="http://www.urlrewriting.net/schemas/config/2006/07">
     <rewrites>
@@ -59,15 +59,15 @@
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.8.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.8.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <entityFramework>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
-  </entityFramework>
 </configuration>
